k8s/backend-deployment.yaml
# Copyright 2026 Egor Khomenko (Egorich88)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: kafka-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: egorich27/kafka-control-backend:latest   # замени на свой registry
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: kafka-bin
              mountPath: /opt/kafka
      volumes:
        - name: kafka-bin
          hostPath:
            path: /opt/kafka   # путь к бинарникам Kafka на ноде (может отличаться)
